--- a/crm_front/index.html
+++ b/crm_front/index.html
@@ -1,110 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>layui test</title>
     <!-- Layui的核心css文件 -->
-    <link rel="stylesheet" href="./layui/css/layui.css">
+    <link rel="stylesheet" href="./layui/css/layui.css" />
     <!-- Layui的核心js文件 -->
     <script src="./layui/layui.js"></script>
-    
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-</head>
-<body>
-
-  <div class="layui-layout layui-layout-admin">
-    <!-- 头区域 -->
-    <div class="layui-header">
-      <div class="layui-logo layui-hide-xs layui-bg-black">夏克立客户管理系统</div>
-    </div>
-
-    <!-- 左侧导航栏内容 -->
-    <div class="layui-side layui-bg-black">
-      <div class="layui-side layui-bg-black">
-        <ul class="layui-nav layui-nav-tree" lay-filter="test">
-
-          <li class="layui-nav-item layui-nav-itemed">
-            <a class="javascript:;" href="javascript:;">系统管理</a>
-            <dl class="layui-nav-child">
-              <dd><a href="/page/department_admin.html">部门管理</a></dd>
-              <dd><a href="/page//employee_admin.html">员工管理</a></dd>
-              <dd><a href="javascript:;">权限管理</a></dd>
-              <dd><a href="javascript:;">角色管理</a></dd>
-            </dl>
-          </li>
-          <li class="layui-nav-item">
-            <a href="javascript:;" class="javascript:;">数据管理</a>
-            <dl class="layui-nav-child">
-              <dd><a href="javascript:;">list 1</a></dd>
-              <dd><a href="javascript:;">list 2</a></dd>
-              <dd><a href="">超链接</a></dd>
-            </dl>
-          </li>
-          <li class="layui-nav-item">
-            <a href="javascript:;" class="javascript:;">客户管理</a>
-            <dl class="layui-nav-child">
-              <dd><a href="javascript:;">list 1</a></dd>
-              <dd><a href="javascript:;">list 2</a></dd>
-              <dd><a href="">超链接</a></dd>
-            </dl>
-          </li>
-          <li class="layui-nav-item">
-            <a href="javascript:;" class="javascript:;">客户历史</a>
-            <dl class="layui-nav-child">
-              <dd><a href="javascript:;">list 1</a></dd>
-              <dd><a href="javascript:;">list 2</a></dd>
-              <dd><a href="">超链接</a></dd>
-            </dl>
-          </li>
-          <li class="layui-nav-item">
-            <a href="javascript:;" class="javascript:;">报表统计</a>
-            <dl class="layui-nav-child">
-              <dd><a href="javascript:;">list 1</a></dd>
-              <dd><a href="javascript:;">list 2</a></dd>
-              <dd><a href="">超链接</a></dd>
-            </dl>
-          </li>
-
-        </ul>
+  </head>
+  <body>
+    <div class="layui-layout layui-layout-admin">
+      <!-- 头区域 -->
+      <div class="layui-header">
+        <div class="layui-logo layui-hide-xs layui-bg-black">
+          夏克立客户管理系统
+        </div>
       </div>
+
+      <!-- 左侧导航栏内容 -->
+      <div class="layui-side layui-bg-black">
+        <div class="layui-side layui-bg-black">
+          <ul class="layui-nav layui-nav-tree" lay-filter="test">
+            <li class="layui-nav-item layui-nav-itemed">
+              <a class="javascript:;" href="javascript:;">系统管理</a>
+              <dl class="layui-nav-child">
+                <dd><a href="/page/department_admin.html">部门管理</a></dd>
+                <dd><a href="/page//employee_admin.html">员工管理</a></dd>
+                <dd><a href="javascript:;">权限管理</a></dd>
+                <dd><a href="javascript:;">角色管理</a></dd>
+              </dl>
+            </li>
+            <li class="layui-nav-item">
+              <a href="javascript:;" class="javascript:;">数据管理</a>
+              <dl class="layui-nav-child">
+                <dd><a href="javascript:;">list 1</a></dd>
+                <dd><a href="javascript:;">list 2</a></dd>
+                <dd><a href="">超链接</a></dd>
+              </dl>
+            </li>
+            <li class="layui-nav-item">
+              <a href="javascript:;" class="javascript:;">客户管理</a>
+              <dl class="layui-nav-child">
+                <dd><a href="javascript:;">list 1</a></dd>
+                <dd><a href="javascript:;">list 2</a></dd>
+                <dd><a href="">超链接</a></dd>
+              </dl>
+            </li>
+            <li class="layui-nav-item">
+              <a href="javascript:;" class="javascript:;">客户历史</a>
+              <dl class="layui-nav-child">
+                <dd><a href="javascript:;">list 1</a></dd>
+                <dd><a href="javascript:;">list 2</a></dd>
+                <dd><a href="">超链接</a></dd>
+              </dl>
+            </li>
+            <li class="layui-nav-item">
+              <a href="javascript:;" class="javascript:;">报表统计</a>
+              <dl class="layui-nav-child">
+                <dd><a href="javascript:;">list 1</a></dd>
+                <dd><a href="javascript:;">list 2</a></dd>
+                <dd><a href="">超链接</a></dd>
+              </dl>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- 内容主体区域 -->
+      <div class="layui-body">
+        <iframe
+          id="iframeMain"
+          src=""
+          style="width: 100%"
+          ;
+          height="100%"
+          ;
+        ></iframe>
+      </div>
+
+      <!-- 底部固定区域 -->
+      <div class="layui-footer">底部固定区域</div>
     </div>
 
-    <!-- 内容主体区域 -->
-    <div class="layui-body">
-      <iframe id="iframeMain" src="" style="width: 100%"; height="100%";></iframe>
-    </div>
+    <script>
+      $(document).ready(function () {
+        $("dd>a").click(function (e) {
+          e.preventDefault();
+          $("#iframeMain").attr("src", $(this).attr("href"));
+        });
+      });
+      //     function selectAll(){
+      //       $.ajax({
+      //         url:'http://localhost:8080/department/selectAll',
+      //         type:'GET',
+      //         dataType:'json',
+      //         success : function(result) {
+      //
+      //         }
+      //          error : function(){
 
-    <!-- 底部固定区域 -->
-    <div class="layui-footer">
-      底部固定区域
-    </div>
-  </div>
-
-
-  <script>
-    $(document).ready(function(){
-    $("dd>a").click(function (e) {
-    e.preventDefault();
-    $("#iframeMain").attr("src",$(this).attr("href"));
-    });
-    });
-//     function selectAll(){
-//       $.ajax({
-//         url:'http://localhost:8080/department/selectAll',
-//         type:'GET',
-//         dataType:'json',
-//         success : function(result) {
-//             
-//         }
-//          error : function(){
-
-//          }
-//       })
-//     }    
-  </script>
-
-  
-</body>
+      //          }
+      //       })
+      //     }
+    </script>
+  </body>
 </html>
