--- a/crm_front/index.html
+++ b/crm_front/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>layui test</title>
+    <title>客户管理系统</title>
     <!-- Layui的核心css文件 -->
     <link rel="stylesheet" href="./layui/css/layui.css" />
     <!-- Layui的核心js文件 -->
@@ -74,7 +74,7 @@
       <div class="layui-body">
         <iframe
           id="iframeMain"
-          src=""
+          src="/page/department_admin.html"
           style="width: 100%"
           ;
           height="100%"
