--- a/crm_front/index.html
+++ b/crm_front/index.html
@@ -29,7 +29,7 @@
               <a class="javascript:;" href="javascript:;">系统管理</a>
               <dl class="layui-nav-child">
                 <dd><a href="/page/department_admin.html">部门管理</a></dd>
-                <dd><a href="/page//employee_admin.html">员工管理</a></dd>
+                <dd><a href="/page/employee_admin.html">员工管理</a></dd>
                 <dd><a href="javascript:;">权限管理</a></dd>
                 <dd><a href="javascript:;">角色管理</a></dd>
               </dl>
